--- a/templates/errors/_base.html
+++ b/templates/errors/_base.html
@@ -2,6 +2,6 @@
 
 {% set SURVEY_TYPES_BUSINESS = ["northernireland", "business", "dbt", "dbt-ni", "dbt-dsit", "dbt-dsit-ni", "orr", "desnz", "desnz-ni"] %}
 {% set SURVEY_TYPES_DEFAULT = ["default"] %}
-{% set SURVEY_TYPES_SOCIAL = ["social", "ukhsa-ons"] %}
-{% set SURVEY_TYPES_HEALTH = ["health"] %}
+{% set SURVEY_TYPES_SOCIAL = ["social"] %}
+{% set SURVEY_TYPES_HEALTH = ["health", "ukhsa-ons"] %}
 {% set SURVEY_TYPES_ALL = SURVEY_TYPES_BUSINESS + SURVEY_TYPES_DEFAULT + SURVEY_TYPES_SOCIAL + SURVEY_TYPES_HEALTH %}
