--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -79,11 +79,25 @@
     </script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_tag_id }}"></script>
     <script nonce="{{ csp_nonce }}">
+      function loadGTM() {
+        (function (document, script, google_tag_id) {
+          var f = document.getElementsByTagName(script)[0],
+            j = document.createElement(script);
+          j.async = true;
+          j.src =
+            "https://www.googletagmanager.com/gtag/js?id=" +
+            google_tag_id;
+          var n = document.querySelector("[nonce]");
+          n && j.setAttribute("nonce", n.nonce || n.getAttribute("nonce"));
+          f.parentNode.insertBefore(j, f);
+        })(document, "script", "{{ google_tag_id }}");
+      }
+
       window.dataLayer = window.dataLayer || [];
       var cookie_usage_regex = /^(.*)?\s*'usage':true\s*[^;]+(.*)?$/;
       if (document.cookie.match(cookie_usage_regex)) {
+        loadGTM()
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', '{{ google_tag_id }}');
