--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -8,12 +8,6 @@
   {% block form_title %}
   {% endblock %}
 
-  {% call onsPanel({
-    "classes": "ons-u-mb-l"
-  }) %}
-    <p>{{ _("Please review your answers and confirm these are correct") }}</p>
-  {% endcall %}
-
   <div class="ons-u-mb-m">
     {% include 'partials/summary/summary.html' %}
   </div>
@@ -22,7 +16,7 @@
 {% block submit_button %}
   {{
     onsButton({
-      "text": _("Yes, I confirm these are correct"),
+      "text": _("Yes, I confirm this is correct"),
       "variants": 'timer',
       "attributes": {
         "data-qa": "btn-submit",
