--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -20,7 +20,7 @@
         "classes": "ons-u-mb-s",
         "iconType": "lock"
     }) %}
-        <p>{{ _('The email will be sent from <strong class="ons-highlight">census.2021@notifications.service.gov.uk</strong>') }}</p>
+        <p>{{ _('The email will be sent from <strong>census.2021@notifications.service.gov.uk</strong>') }}</p>
     {% endcall %}
 
     {% if content.show_send_another_email_guidance %}
