--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -22,7 +22,7 @@
         "classes": "ons-u-mb-s",
         "iconType": "lock"
     }) %}
-        <p>{{ _('The text will be sent from <strong class="ons-highlight">Census2021</strong>') }}</p>
+        <p>{{ _('The text will be sent from <strong>Census2021</strong>') }}</p>
     {% endcall %}
     {{
         onsButton({
