--- a/templates/hub.html
+++ b/templates/hub.html
@@ -3,23 +3,22 @@
 {% from "components/summary/_macro.njk" import onsSummary %}
 
 {% block pre_submit_button_content %}
-  {% if content.individual_response_url %}
-    {% set title = _("If you can’t answer someone else’s questions") %}
-    {% include 'partials/individual-response-guidance.html' %}
-  {% endif %}
+    {% if content.individual_response_url %}
+        {% set title = _("If you can’t answer someone else’s questions") %}
+        {% include 'partials/individual-response-guidance.html' %}
+    {% endif %}
 {% endblock pre_submit_button_content %}
 
 {% block summary %}
-  {% if content.rows %}
-    {{ onsSummary({
-        "hub": true,
-        "classes": "ons-u-mt-m",
-        "summaries": [{
-            "groups": [{
-                "rows": content.rows
+    {% if content.rows %}
+        {{ onsSummary({
+            "variant": "hub",
+            "classes": "ons-u-mt-m",
+            "summaries": [{
+                "groups": [{
+                    "rows": content.rows
+                }]
             }]
-        }]
-      })
-    }}
-  {% endif %}
+        }) }}
+    {% endif %}
 {% endblock summary %}
