--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -2,7 +2,7 @@
 
 {% from "components/panel/_macro.njk" import onsPanel %}
 {% from "components/button/_macro.njk" import onsButton %}
-{% from "components/metadata/_macro.njk" import onsMetadata %}
+{% from "components/description-list/_macro.njk" import onsDescriptionList %}
 
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% set sign_out_url = content.sign_out_url %}
@@ -27,7 +27,7 @@
   <h1 class="ons-u-mt-m">
     {{ content.submitted_text}}
   </h1>
-  {{ onsMetadata(content.metadata)}}
+  {{ onsDescriptionList(content.metadata)}}
   {% if not content.view_submitted_response.expired %}
     {{
       onsButton({
@@ -65,7 +65,7 @@
     {% call onsPanel({
       "id": "view-submitted-guidance",
       "classes": "ons-u-mb-m"
-     }) %}
+    }) %}
       {{ _("For security, you can no longer view or get a copy of your answers") }}
     {% endcall %}
   {% endif %}
