--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -45,7 +45,7 @@
     <p class="ons-u-mb-s">{{ _("Your answers will be processed in the next few weeks.") }}
       {{ _("We may contact you to query your answers via phone or secure message.") }}</p>
     <p class="ons-u-mb-s">{{ _("For more information on how we use this data.") }}<br>
-      <a href="https://www.ons.gov.uk/surveys">https://www.ons.gov.uk/surveys</a></p>
+      <a href="https://www.ons.gov.uk/surveys">{{ _("Learn more about how we use this data") }}</a></p>
   {% endif %}
 
   {% set countdown_expired_text = _("For security, you can no longer view or get a copy of your answers") %}
