--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -38,7 +38,8 @@
           "data-qa": "btn-print",
           "data-ga-category": "Print button",
           "data-ga-action": "Open print Dialogue",
-          "data-ga-label": "Print button click"
+          "data-ga-label": "Print button click",
+          "data-ga": "click"
         }
       })
     }}
@@ -52,7 +53,8 @@
           "data-qa": "btn-pdf",
           "data-ga-category": "PDF button",
           "data-ga-action": "Download PDF",
-          "data-ga-label": "PDF button click"
+          "data-ga-label": "PDF button click",
+          "data-ga": "click"
         }
       })
     }}
